Fixed datepicker spec failures due to incorrect z-index on .toolbar

--- a/app/assets/stylesheets/modules/layout.css.scss
+++ b/app/assets/stylesheets/modules/layout.css.scss
@@ -63,7 +63,7 @@ footer {
   padding-top: $tophat-clearance;
   height: 58px;
   position: absolute;
-  z-index: 10;
+  z-index: 100;
   left: $toolbar-logo-container-width;
 
   p {
